Added field type as markup class to the header cells.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@439 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -200,6 +200,10 @@ thead a.desc { background-image: url(images/down.png); }
 
 tr.altrow td { background-color: #f6f6f6; }
 
+th.auto { width: 4%; }
+th.boolean { width: 8%; }
+th.char, th.email { width: 16%; }
+
 /**
  * Commons.
  */
