Fixed width of first column in the subscription form.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@441 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -476,7 +476,7 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
 
 .subscription-form th.signature {
     text-align: left;
-    width: 600px;
+    width: 80%;
 }
 
 .subscription-form label {
