Fixed padding of sidebar.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@446 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -926,7 +926,7 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
 #sidebar {
     float: left;
     width: 180px;
-    padding: 0 20px 20px;
+    padding: 20px;
 }
 
 #user-profile-widget {
@@ -936,7 +936,7 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
 }
 
 #user-profile-widget .body {
-    padding: 10px 0;
+    padding: 0 0 10px;
     border-bottom: 1px solid #c0c0c0;
 }
 
