Improved style of table headers.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@449 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -180,6 +180,7 @@ thead td, th {
     border-right: 1px solid #fff;
     border-bottom: 1px solid #fff;
     padding: 5px 10px;
+    vertical-align: top;
 }
 
 thead td a, thead td a:link, thead td a:visited,
@@ -205,7 +206,11 @@ th.char, th.email { width: 20%; }
 
 td .actions { float: right; }
 
-.properties th { width: 18%; }
+.properties th {
+    width: 18%;
+    padding: 10px;
+}
+
 .properties td { width: 32%; }
 
 /**
