Improved rendering of category tree.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@452 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/taxonomy/category.html
+++ b/themes/default/templates/taxonomy/category.html
@@ -1,5 +1,5 @@
 <li class="category">
-    <a href="{{ object.get_absolute_url }}">{{ object }}</a>
+    <a title="{{ object }}" href="{{ object.get_absolute_url }}">{{ object }}</a>
     {% if object.children.all %}
     <ul>
         {% for child in object.children.all %}
