Improved rendering of "add" link to select widgets.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@454 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -121,7 +121,20 @@ form .errors input, form .errors textarea, form .errors select {
     border: 1px solid #d21717;
 }
 
-form .add a { margin-right: 100%; }
+form .add {
+    display: block;
+    overflow: auto;
+}
+
+form .add input, form .add select {
+    float: left;
+    margin-bottom: 0;
+    margin-right: 5px;
+}
+
+form .add a { margin-top: 4px; }
+
+form .add .multiple a { margin-top: 0; }
 
 form .json-key {
     float: left;
