Added "Project Manager" to the list of default roles.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@460 71535020-02ba-11df-897e-95fb7fca2173

--- a/settings.py.tmpl
+++ b/settings.py.tmpl
@@ -453,6 +453,7 @@ ROLES = (
     ('COO', _("COO")),
     ('CFO', _("CFO")),
     ('CTO', _("CTO")),
+    ('PROJMANAGER', _("Project Manager")),
     ('SALESMANAGER', _("Sales Manager")),
     ('SALESMAN', _("Salesman")),
     ('EMPLOYEE', _("Employee")),
