- Removed generic relations from models of "addressing" app. - Improved "partners" app.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@465 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -302,8 +302,6 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
     float: left;
     width: 100%;
     margin-top: 10px;
-    padding-top: 15px;
-    border-top: 2px solid #c0c0c0;
 }
 
 .comments .meta p {
@@ -1057,6 +1055,10 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
     width: 32%;
     border: none;
 }
+
+#main .properties .yes { margin: 0; }
+
+#main .properties .no { margin: 0; }
 
 #main .properties td ul { margin: 0 0 -1px; }
 
