--- a/themes/default/templates/projects/milestone_detail.html
+++ b/themes/default/templates/projects/milestone_detail.html
@@ -78,8 +78,8 @@
                     </td>
                     <th>{% trans "Deadline" %}:</th>
                     <td>
-                        {% if object.date_due %}
-                        {{ object.date_due }}
+                        {% if object.deadline %}
+                        {{ object.deadline }}
                         {% else %}
                         <span class="disabled">{% trans "empty" %}</span>
                         {% endif %}
