--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -925,7 +925,13 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
 
 #content .milestones dt h3 { margin-bottom: 5px; }
 
+#content .milestones dt h3 .yes {
+    float: left;
+    margin: 1px 10px -1px 0;
+}
+
 #content .milestones .meta {
+    clear: both;
     font-weight: normal;
     color: #000;
 }
