--- a/themes/default/templates/partners/address_edit.html
+++ b/themes/default/templates/partners/address_edit.html
@@ -3,10 +3,86 @@
 {% load i18n %}
 {% load breadcrumbs %}
 
+{% block meta_title %}{% if object.pk %}{% trans 'Edit address' %}{% else %}{% trans 'Add address' %}{% endif %}{% endblock %}
+
+{% block breadcrumbs %}
+    {% add_crumb 'Home' '/' %}
+    {% add_crumb 'Partners' 'partner_list' %}
+    {% if owner_class == "Contact" %}
+    {% add_crumb 'Contacts' 'contact_list' %}
+    {% add_crumb owner owner.get_absolute_url %}
+    {% add_crumb 'Addresses' 'contact_addresses' owner.pk %}
+    {% else %}
+    {% add_crumb owner owner.get_absolute_url %}
+    {% add_crumb 'Addresses' 'partner_addresses' owner.pk %}
+    {% endif %}
+    {% if object.pk %}
+    {% add_crumb object %}
+    {% add_crumb "Edit" %}
+    {% else %}
+    {% add_crumb "Add" %}
+    {% endif %}
+{% endblock %}
+
+{% block title %}
+<div class="title">
+    {% if object.pk %}
+    <h1>{{ object }}</h1>
+    <h2>{% trans 'Edit address' %}</h2>
+    {% else %}
+    <h1>{% trans 'Add address' %}</h1>
+    {% endif %}
+</div>
+{% endblock %}
+
 {% block main %}
 <form method="post" action=".">
     {% csrf_token %}
-    {{ form.as_p }}
+    <table class="properties">
+        <tr>
+            <th>{% trans "Type" %}:</th>
+            <td colspan="3">
+                {{ form.type.errors }}
+                {{ form.type }}
+            </td>
+        </tr>
+        <tr>
+            <th>{% trans "Street" %}:</th>
+            <td>
+                {{ form.street.errors }}
+                {{ form.street }}
+            </td>
+            <th>{% trans "Number" %}:</th>
+            <td>
+                {{ form.number.errors }}
+                {{ form.number }}
+            </td>
+        </tr>
+        <tr>
+            <th>{% trans "City" %}:</th>
+            <td>
+                {{ form.city.errors }}
+                {{ form.city }}
+            </td>
+            <th>{% trans "Zip" %}:</th>
+            <td>
+                {{ form.zip.errors }}
+                {{ form.zip }}
+            </td>
+        </tr>
+        <tr>
+            <th>{% trans "State/Province" %}:</th>
+            <td>
+                {{ form.state.errors }}
+                {{ form.state }}
+            </td>
+            <th>{% trans "Country" %}:</th>
+            <td>
+                {{ form.country.errors }}
+                {{ form.country }}
+            </td>
+        </tr>
+    </table>
     <span class="submit"><input type="submit" value="{% trans 'Save' %}"/></span>
 </form>
 {% endblock %}
