--- a/themes/default/templates/partners/phone_edit.html
+++ b/themes/default/templates/partners/phone_edit.html
@@ -1,11 +1,57 @@
 {% extends "base.html" %}
 
 {% load i18n %}
+{% load breadcrumbs %}
+
+{% block meta_title %}{% if object.pk %}{% trans 'Edit phone number' %}{% else %}{% trans 'Add phone number' %}{% endif %}{% endblock %}
+
+{% block breadcrumbs %}
+    {% add_crumb 'Home' '/' %}
+    {% add_crumb 'Partners' 'partner_list' %}
+    {% if owner_class == "Contact" %}
+    {% add_crumb 'Contacts' 'contact_list' %}
+    {% add_crumb owner owner.get_absolute_url %}
+    {% add_crumb 'Phones numbers' 'contact_phones' owner.pk %}
+    {% else %}
+    {% add_crumb owner owner.get_absolute_url %}
+    {% add_crumb 'Phones numbers' 'partner_phones' owner.pk %}
+    {% endif %}
+    {% if object.pk %}
+    {% add_crumb object %}
+    {% add_crumb "Edit" %}
+    {% else %}
+    {% add_crumb "Add" %}
+    {% endif %}
+{% endblock %}
+
+{% block title %}
+<div class="title">
+    {% if object.pk %}
+    <h1>{{ object }}</h1>
+    <h2>{% trans 'Edit phone number' %}</h2>
+    {% else %}
+    <h1>{% trans 'Add phone number' %}</h1>
+    {% endif %}
+</div>
+{% endblock %}
 
 {% block main %}
 <form method="post" action=".">
     {% csrf_token %}
-    {{ form.as_p }}
+    <table class="properties">
+        <tr>
+            <th>{% trans "Type" %}:</th>
+            <td>
+                {{ form.type.errors }}
+                {{ form.type }}
+            </td>
+            <th>{% trans "Number" %}:</th>
+            <td>
+                {{ form.number.errors }}
+                {{ form.number }}
+            </td>
+        </tr>
+    </table>
     <span class="submit"><input type="submit" value="{% trans 'Save' %}"/></span>
 </form>
 {% endblock %}
