--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -214,7 +214,7 @@ table a.asc { background-image: url(images/up.png); }
 
 table a.desc { background-image: url(images/down.png); }
 
-tr.altrow td { background-color: #f6f6f6; }
+tr.altrow td { background-color: #f8f8f8; }
 
 th.auto { width: 6%; }
 th.boolean { width: 8%; }
@@ -641,7 +641,7 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
 
 #breadcrumbs {
     padding: 6px 0;
-    background: #f6f6f6;
+    background: #f8f8f8;
     border-top: 1px solid #fff;
     border-bottom: 1px solid #c0c0c0;
 }
@@ -676,7 +676,7 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
 
 #content .menu li a:hover {
     background-image: url(images/bullet_hover.png);
-    background-color: #f6f6f6;
+    background-color: #f8f8f8;
 }
 
 #content .menu li li a { padding-left: 40px; }
@@ -1049,7 +1049,7 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
 
 #main .sections .menu li a, #main .sections .menu li span {
     display: block;
-    background: #f6f6f6;
+    background: #f8f8f8;
     border: none;
     border-top: 1px solid #c0c0c0;
     border-right: 1px solid #c0c0c0;
@@ -1102,6 +1102,8 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
     color: #1f1f1f;
     text-align: right;
 }
+
+#main .properties .altrow td { background-color: transparent; }
 
 #main .properties td {
     width: 32%;
