Improved style of error list for normal forms.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@477 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -707,8 +707,10 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
     background-position: 10px 5px;
 }
 
+#content form .errorlist,
 #content form .properties .errorlist { margin: 0; }
 
+#content form .errorlist li,
 #content form .properties .errorlist li {
     padding: 5px 0 5px 25px;
     margin: 0;
@@ -718,7 +720,9 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
     color: #d21717;
 }
 
-#content .messages li.error, #content form .properties .errorlist li { background-image: url(images/error.png); }
+#content .messages li.error,
+#content form .errorlist li,
+#content form .properties .errorlist li { background-image: url(images/error.png); }
 
 #content .messages li.info { background-image: url(images/info.png); }
 
